# seashell

./: CLAUDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-macos.yml  ci.yml
landing/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
landing/public/: robots.txt  sitemap.xml
landing/src/: App.tsx  config.ts  index.css  main.tsx
landing/src/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  Nav.tsx  Reveal.tsx  Safety.tsx  Shortcuts.tsx
landing/src/components/ui/: 3d-card.tsx  card-hover-effect.tsx  flip-words.tsx  meteors.tsx  moving-border.tsx  spotlight.tsx  text-generate-effect.tsx
landing/src/hooks/: useTheme.ts
scripts/: roundtrip-test.ts
scripts/fixtures/: sample.zshrc
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: command.tsx  dialog.tsx  resizable.tsx  sheet.tsx  sonner.tsx
src/components/zshrc/: BackupsSheet.tsx  CommandPalette.tsx  DiffView.tsx  Kbd.tsx  PathArrayCard.tsx  ReviewSaveDialog.tsx  SourcePane.tsx  StatusBar.tsx  StructuredPane.tsx  Titlebar.tsx  rows.tsx
src/lib/: format.ts  tauri.ts
src/lib/zshrc/: diff.ts  highlight.ts  parser.ts  view.ts
