[package]
name = "seashell"
version = "0.1.0"
description = "A visual .zshrc manager"
authors = ["Cuzeac Florin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seashell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
notify = "6"

# Desktop-only plugins (single-instance, global shortcut, window-state)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

# Optimized release build: smaller, faster binary for distribution.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

